manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grumpy
  namespace: default
  labels:
    name: grumpy
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: grumpy 
# ---
# apiVersion: v1
# data:
#   ca.crt: <BASE64>
#   config.json: <BASE64>
# kind: Secret
# metadata:
#   creationTimestamp: null
#   name: notary-auth
apiVersion: v1
data:
  key: YWJjZA==
kind: Secret
metadata:
  name: public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grumpy
  namespace: default
  labels:
    name: grumpy
spec:
  selector:
    matchLabels:
      name: grumpy
  replicas: 1
  template:
    metadata:
      name: grumpy 
      labels:
        name: grumpy
    spec:
      containers:
        - name: webhook
          image: testinguser883/practice:cosign
          # image: rewanthtammana/grumpy:nonscratch
          # image: pipo02mix/grumpy:1.0.0
          imagePullPolicy: Always
          args:
            - -alsologtostderr
            - --log_dir=/
            - -v=10
            - 2>&1
          resources:
            limits:
              memory: 50Mi
              # cpu: 300m
            requests:
              memory: 00Mi
              # cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: cosign
              mountPath: /etc/cosign/key
              subPath: key
              readOnly: true
            # - name: notary-auth
            #   mountPath: /home/webhook/.notary
            #   readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        # - name: webhook-certs
        #   secret:
        #     secretName: notary-auth
        - name: webhook-certs
          secret:
            secretName: grumpy
        - name: cosign
          secret:
            secretName: public
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: grumpy
webhooks:
  - name: image.validator.grumpy
    clientConfig:
      service:
        name: grumpy
        namespace: default
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lKQUlIeEdZeitZaTdwTUEwR0NTcUdTSWIzRFFFQkN3VUFNQmN4RlRBVEJnTlYKQkFNTURHRmtiV2x6YzJsdmJsOWpZVEFnRncweU1qQXhNRFV4TmpJNE16WmFHQTh5TWprMU1UQXlNVEUyTWpnegpObG93SFRFYk1Ca0dBMVVFQXd3U1ozSjFiWEI1TG1SbFptRjFiSFF1YzNaak1JSUJJakFOQmdrcWhraUc5dzBCCkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTNoaTQ4Z05ZaVJsVmxvVkYvTHlLUkdoa3lCcllKZGI5bG5XWXpIQlEKVUFmK0FJNThaUk8xWTVVS1ZMbVdMR3BZRVVRd3RHMWw4SDhsTlliQWl6eldCVTRrbjNway82T3draUYzdmxyUgpuSnNsTWw5NUR [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
